--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <link href="styles.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="fancybox/jquery.fancybox.css" type="text/css" media="screen" />
     <script type="text/javascript" src="fancybox/jquery.fancybox.pack.js"></script>
     <title>My AIDS/LifeCycle 2014</title>
@@ -10,13 +11,14 @@
   <body>
     <section id="top">
       <h1>My AIDS/LifeCycle 2014</h1>
-      <p>First things first…</p>
+      <p><em>First things first…</em></p>
       <h2>$3,309</h2>
-      <p>That is the total amount donated to me. By you. Thanks!</p>
-      <p>This LifeCycle was as good as ever – long and too short, beautiful and challenging, emotional and humbling. Here are a few pictures I've taken along the 532 mi (856 km) we rode this year.</p>
+      <p>This is the total amount donated to me. By you. Thanks!</p>
+      <p>This LifeCycle was as good as ever – long enough and too short, beautiful and challenging, emotional and humbling. Here are a few pictures I've taken along the 532 mi (856 km) route we rode this year.</p>
     </section>
     <section>
       <article id="sfsc">
+        <h3>Day 1: San Francisco to Santa Cruz</h3>
         <ul>
           <li>
             <div>
@@ -47,11 +49,11 @@
       </article>
 
       <article id="sckc">
+        <h3>Day 2: Santa Cruz to King City</h3>
         <ul>
           <li>
             <div>
               <img class='thumb' src="thumbs/mile90.jpg"/>
-              <!--p>Mile -8</p-->
             </div>
           </li>
           <li>
@@ -78,6 +80,7 @@
       </article>
 
       <article id="kcpr">
+        <h3>Day 3: King City to Paso Robles</h3>
         <ul>
           <li>
             <div>
@@ -108,6 +111,7 @@
       </article>
 
       <article id="prsm">
+        <h3>Day 4: Paso Robles to Santa Maria</h3>
         <ul>
           <li>
             <div>
@@ -143,6 +147,7 @@
       </article>
       
       <article id="sml">
+        <h3>Day 5: Santa Maria to Lompoc</h3>
         <ul>
           <li>
             <div>
@@ -163,6 +168,7 @@
       </article>
 
       <article id="lv">
+        <h3>Day 6: lompc to Ventura</h3>
         <ul>
           <li>
             <div>
@@ -193,6 +199,7 @@
       </article>
 
       <article id="vla">
+        <h3>Day 7: Ventura to Los Angeles</h3>
         <ul>
           <li>
             <div>
@@ -212,11 +219,13 @@
         </ul>
       </article>
 
+    <p><em>And last but not least…</em></p>
+
     <h2>$15,000,159</h2>
 
-    <p>And that is the total amount that was raised as of the beginning of the event – an absolute record. Fifteen million dollars, going to programs for patients care, prevention and awareness.</p>
+    <p>That is the total amount that was raised as of the beginning of the event – an absolute record. Fifteen million dollars, going to programs for patients care, prevention and awareness of HIV/AIDS.</p>
 
-    <p>What allowed us to pass the $15M mark? It's really just one rider, just one little extra donation. It's you. You made it possible. Thanks, and be proud of yourself!</p>
+    <p>What allowed us to pass the $15M mark? Just $159 – almost nothing. It's really just one rider, just one little extra donation. It's your donation. You are just as responsible for this record-setting number as any other volunteer, rider or staff. Thanks, and be proud of yourself!</p>
 
     <script>
       $(".thumb").click(function(event) {
